--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -4,16 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Odin Recipes - Brownies</title>
   </head>
   <body>
     <h1>Brownies</h1>
-    <img src="img/Chocolatebrownie.jpeg" alt="Chocolate Brownie" />
-    <h4>Description</h4>
+    <img
+      src="../img/Chocolatebrownie.jpeg"
+      alt="Chocolate Brownie"
+      width="340px"
+      height="280px"
+    />
+
+    <h3>Description</h3>
     <p>
       This brownie recipe makes rich, fudgy brownies that always turn out well.
       They're topped with homemade chocolate frosting to make the best brownies
       ever!
     </p>
+
+    <h3>Ingredients</h3>
+    <p>
+      These are the ingredients you'll need to make the best brownie recipe
+      ever:
+    </p>
+    <ul>
+      <li>1/2 cup butter</li>
+      <li>1 cup White sugar</li>
+      <li>2 eggs</li>
+      <li>1 teaspoon vanilla extract</li>
+      <li>1/3 cup unsweetened cocoa powder</li>
+      <li>1/2 cup all-purpose flour</li>
+      <li>1/4 teaspoon salt</li>
+      <li>1/4 teaspoon baking powder</li>
+    </ul>
+    <h4>Frosting:</h4>
+    <ul>
+      <li>3 tablespoons butter, softened</li>
+      <li>3 tablespoons unsweetened cocoa powder</li>
+      <li>1 tablespoon honey</li>
+      <li>1 tablespoon vanilla extract</li>
+      <li>1 cup confectioners' sugar</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+      <li>
+        Preheat the oven to 350 degrees F (175 degrees C). Grease and flour an
+        8-inch square pan.
+      </li>
+      <li>
+        Melt 1/2 cup butter in a large saucepan. Remove from heat, and stir in
+        sugar, eggs, and 1 teaspoon vanilla. Beat in 1/3 cup cocoa, flour, salt,
+        and baking powder. Spread batter into prepared pan.
+      </li>
+      <li>
+        Bake in the preheated oven until top is dry and edges have started to
+        pull away from the sides of the pan, about 25 to 30 minutes. Let cool
+        briefly before frosting.
+      </li>
+      <li>
+        To make the frosting: Combine softened butter, confectioners' sugar, 3
+        tablespoons cocoa, honey, and 1 teaspoon vanilla extract in a bowl. Stir
+        until smooth. Frost brownies while they are still warm.
+      </li>
+    </ol>
   </body>
 </html>
