--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/brownies.html">Brownies</a>
+    <ul>
+      <li>
+        <a href="/recipes/brownies.html">Brownies</a>
+      </li>
+      <li>
+        <a href="/recipes/mille-feuille.html">Mille Feuille</a>
+      </li>
+      <li>
+        <a href="/recipes/poffertjes.html">Poffertjes</a>
+      </li>
+    </ul>
   </body>
 </html>
